test/LitTests/SemanticAnalysis/LifetimeMethods/InvalidArgumentCountSizeOf.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__sizeof' has incorrect argument count
	static size_t __sizeof(unused int i) noexcept {
		return 1;
	}
}

// CHECK: 1 error generated.
